--- a/index.html
+++ b/index.html
@@ -8,6 +8,9 @@
     <link rel="stylesheet" href="styles.css" />
   </head>
   <body>
+    <div id="gameboard"></div>
+    <p id="info"></p>
     <script src="app.js"></script>
   </body>
 </html>
+  
